force-app/main/default/objects/npsp4hub__PaymentHub_Settings__c/fields/npsp4hub__Analytics_Last_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Analytics_Last_Run_Date__c</fullName>
    <label>Analytics Last Run Date</label>
    <type>Date</type>
</CustomField>