force-app/main/default/objects/npsp4hub__PaymentHub_Settings__c/fields/npsp4hub__Mandate_Reference__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Mandate_Reference__c</fullName>
    <label>Mandate Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>