force-app/main/default/objects/npsp4hub__PaymentHub_Settings__c/fields/npsp4hub__Re_use_existing_mandate__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Re_use_existing_mandate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>re-use existing mandate if available</description>
    <label>Re-use existing mandate</label>
    <type>Checkbox</type>
</CustomField>