force-app/main/default/objects/npsp4hub__PaymentHub_Settings__c/fields/npsp4hub__Store_Informal_Logs__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub__Store_Informal_Logs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Informal Logs</label>
    <type>Checkbox</type>
</CustomField>